# uhop

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  api.Dockerfile  autotune.patch  cli.py  contributing.sh  pyproject.toml  pyptoject.toml  pytest.ini  requirements.txt  setup.py  start-demo.bat  start-demo.sh  test_uhop.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_improvement.yml  feature_request.md  feature_request.yml  task.yml
.github/workflows/: ci-kpi.yml  ci.yml  close-duplicate-issues.yml  deploy-frontend-pages.yml  format-check.yml  gh-pages.yml  pr-title.yml  sync-issues.yml  sync_issues.yml
backend/: index.js  package-lock.json  package.json
docs/: AGENT_QUICKSTART.md  AI_GENERATION_PIPELINE.md  ARCHIVE_CANDIDATES.md  AUTOTUNE.md  BACKEND_VULKAN_POC.md  CLBLAST_BUILD.md  DEPLOY.md  ENV_VARS.md  IR_ENHANCED.md  IR_MVP.md  OSS_HELP_WANTED_ISSUE.md  PRODUCTION_VISION.md  PROJECT_CONTEXT_FOR_COPILOT.md  PROTOCOL_V0_1.md  ROADMAP.md  RUN_REPORT.md  TEST_PRUNING_CANDIDATES.md  competitive_positioning.md  ir.md  release_checklist.md
examples/: ai_generation_demo.py  ai_generation_full_demo.py  autotune_inspect.py  bench_matmul_gpu_persistent.py  bench_matmul_gpu_pref.py  benchmark_suite.py  compare_elementwise_add_opencl_vs_naive.py  compare_python_naive_vs_uhop.py  comprehensive_benchmark.py  demo.py  opencl_smoke_test.py  show_devices.py  test_ai_compilation.py  test_full_ai_pipeline.py  test_keep_format.py  train_cnn_uhop.py
examples/benchmarks/: README.md  benchmark_suite.py  (+2 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
issues/: 01-foundation.md  01-implement-runtime-decorator.md  01-pre-mvp-implement-runtime-decorator.md  01_core_ir.md  02-mvp-policy.md  02-pre-mvp-hardware-detection-refinement.md  02_ai_generation_pipeline.md  03-perf-parity.md  03-pre-mvp-basic-caching-metadata-schema.md  03_autotuning_cost_model.md  04-ai-autotune.md  04-pre-mvp-cli-uhop-demo.md  04_backend_hip.md  05-ir-expansion.md  05-pre-mvp-ai-kernel-validation.md  05_backend_spirv.md  06-ecosystem-ux.md  06-pre-mvp-logging-benchmark-viz.md  06_backend_metal.md  07-mvp-multi-backend-benchmarking.md  07_validation_diff.md  08-mvp-u-hop-protocol-spec-v0.1.md  08_validation_fuzz.md  09-mvp-integrate-local-ai-fallback.md  09_benchmark_vendor.md  10-mvp-u-hop-dashboard-web-ui.md  10_agent_profiling.md  11-mvp-automated-correctness-tests.md  11_dataset_telemetry.md  12-future-distributed-kernel-optimization.md  12_production_compiler_infrastructure.md  13-future-self-improving-kernel-training-loop.md  13_ai_performance_modeling.md  14-future-framework-integration.md  14_hardware_aware_kernel_generation.md  15-ci-cd-workflow-docs-promo.md  15_enterprise_production_ready.md  16_automated_kernel_fusion.md  17_scalable_autotuning_infrastructure.md  18_cross_platform_unified_memory.md  (+7 more)
scripts/: sync_issues.py
tests/: test_agent_ir_compile_validate.py  test_backend_preference.py  test_benchmark.py  test_buffer_pool.py  test_cli_config.py  test_conv2d.py  test_cpu_flow.py  test_direct_backends.py  test_edge_lite.py  test_elementwise_add_multi_backend.py  test_elementwise_autotune.py  test_force_baseline.py  test_ir_opencl_lowering.py  test_ir_roundtrip.py  test_matmul.py  test_metrics_snapshot.py  test_opencl_cache_hits.py  test_opencl_conv2d_backward.py  test_opencl_conv2d_shapes.py  test_opencl_matmul_retune.py  test_opencl_matmul_shapes.py  test_opencl_matmul_tiled.py  test_opencl_matmul_tiled_fallback.py  test_optimizer_backend_policy.py  test_protocol_actions_agent.py  test_protocol_validators.py  test_pytorch_conv_grad.py  test_validation.py
uhop/: __init__.py  agent.py  ai_gen.py  autotuner.py  cache.py  cli.py  cli_ai.py  cli_ir.py  cli_kpi.py  config.py  hardware.py  metrics.py  ops_registry.py  optimizer.py  policy.py  profiler.py  protocol.py  pytorch_wrappers.py  sanbox.py  sandbox.py  torch_ext.py  torch_shim.py  validation.py  web_api.py  web_bridge.py
uhop-kernel-forge-main/: README.md  index.html  package-lock.json
uhop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+151 files in other folders)
