[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uhop"
version = "0.1.0"
description = "Universal Hardware Optimization Protocol (UHOP) — AI-powered runtime kernel optimizer for developers."
authors = [
    { name = "UHOP Systems", email = "danbis664@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "triton>=2.2.0; platform_system == 'Linux'",
    "openai>=1.44.0",
    "websocket-client>=1.8.0",
    "py-cpuinfo>=9.0.0",
    "psutil>=5.9.8",
    "pyopencl>=2024.2",
    "tqdm>=4.66.4",
    "tabulate>=0.9.0",
    "orjson>=3.10.7",
    "filelock>=3.15.0",
    "rich>=13.7.1",
    "coloredlogs>=15.0.1",
    "click>=8.1.7",
    "typing-extensions>=4.12.0",
    "packaging>=24.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-benchmark>=4.0.0", "ipython>=8.27.0", "jupyter>=1.1.1"]
amd = ["rocm-py>=6.0.1"]
nvidia = ["cupy-cuda12x>=13.0.0"]

[project.urls]
Homepage = "https://github.com/sevenloops/uhop"
Documentation = "https://uhop.dev/docs"
Source = "https://github.com/sevenloops/uhop"

[project.scripts]
uhop = "uhop.cli:main"
uhop-agent = "uhop.agent:main"
