[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uhop"
version = "0.1.0"
description = "Universal Hardware Optimization Protocol (UHOP) — AI-powered runtime kernel optimizer for developers."
authors = [
    { name = "UHOP Systems", email = "danbis664@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "triton>=2.2.0; platform_system == 'Linux'",
    "openai>=1.44.0",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
    "py-cpuinfo>=9.0.0",
    "psutil>=5.9.8",
    "pyopencl>=2024.2",
    "jinja2>=3.1.4",
    "tqdm>=4.66.4",
    "tabulate>=0.9.0",
    "orjson>=3.10.7",
    "filelock>=3.15.0",
    "rich>=13.7.1",
    "coloredlogs>=15.0.1",
    "click>=8.1.7",
    "typing-extensions>=4.12.0",
    "packaging>=24.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.27.0",
    "jupyter>=1.1.1",
    # developer tooling
    "ruff>=0.6.9",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.0",
    "pre-commit>=3.8.0",
]
amd = ["rocm-py>=6.0.1"]
nvidia = ["cupy-cuda12x>=13.0.0"]
edge = [
    # Minimal dependencies for edge devices (Raspberry Pi, Jetson, mobile)
    # Excludes PyTorch (~2GB), Triton, and AI codegen dependencies
    "numpy>=1.26.0",
    "pyopencl>=2024.2",
    "click>=8.1.7",
    "tabulate>=0.9.0",
    "orjson>=3.10.7",
    "filelock>=3.15.0",
]

[project.urls]
Homepage = "https://github.com/sevenloops/uhop"
Documentation = "https://uhop.dev/docs"
Source = "https://github.com/sevenloops/uhop"

[project.scripts]
uhop = "uhop.cli:main"
uhop-agent = "uhop.agent:main"
uhop-kpi = "uhop.cli_kpi:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Only package the Python library under `uhop` and its subpackages
include = ["uhop", "uhop.*"]
exclude = [
    "tests",
    "tests.*",
    "frontend",
    "frontend.*",
    "backend",
    "backend.*",
    "docs",
    "docs.*",
    "examples",
    "examples.*",
    "issues",
    "issues.*",
]

[tool.setuptools.package-data]
# Ship kernel sources/templates so they can be used at runtime (OpenCL/CUDA/HIP/Metal)
uhop = [
    "kernels/**/*.cl",
    "kernels/**/*.cu",
    "kernels/**/*.cuh",
    "kernels/**/*.hip",
    "kernels/**/*.metal",
    "kernels/**/*.jinja",
    "kernels/**/*.h",
    "kernels/**/*.hpp",
    "kernels/**/*.c",
    "kernels/**/*.cpp",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".venv",
    ".deps",
    "frontend",
    "backend",
    "docs",
    "examples",
    "issues",
    "uhop/generated_kernels",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E731"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E731"]
"uhop/benchmarks/*" = ["E501", "E731"]

[tool.black]
line-length = 120
target-version = ["py310"]
